CloudNative/week08/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: smartyhero/httpserver:0.0.1
          imagePullPolicy: IfNotPresent
          command:
            - /httpserver
          tty: true
          stdin: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            initialDelaySeconds: 3
            failureThreshold: 3
            periodSeconds: 2
            timeoutSeconds: 2
            httpGet:
              port: 80
              path: /healthz
          readinessProbe:
            initialDelaySeconds: 3
            failureThreshold: 3
            periodSeconds: 2
            timeoutSeconds: 2
            httpGet:
              port: 80
              path: /healthz
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep 10
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: ClusterIP
  selector:
    app: httpserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
