CloudNative/week08/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: ClusterIP
  selector:
    app: httpserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
  namespace: default
spec:
  rules:
  - host: httpserver.smartyhero.com
    http:
      paths:
      - backend:
          service:
            name: httpserver
            port:
              number: 80
        path: /
        pathType: Prefix
